--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container mt-5">
         <div class="row">
 
-            <form onsubmit="return checkValidity()" action="send.php" method="get" id="userForm"
+            <form onsubmit="return checkValidity()" action="send.php" method="post" id="userForm"
                 class="form-control mb-2 p-3 m-auto w-auto bg-info">
                 <div>
                     <label for="userName" class="form-label fw-bold">Як тебе звати?</label><input class="form-control"
